fixed textarea bug&my z-index bug

--- a/src/component/InfoT/infoT.scss
+++ b/src/component/InfoT/infoT.scss
@@ -1,5 +1,5 @@
 .push-container{
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 13;
