--- a/src/pages/share/share.scss
+++ b/src/pages/share/share.scss
@@ -42,10 +42,17 @@
   height: 610px;
 }
 .content{
-  z-index: 0;
   font-size: 28px;
   background-color: #F3F3F3;
   width: 100%;
+}
+.fake-text{
+  font-size:28px;
+  font-family:PingFang SC;
+  font-weight:400;
+  line-height:40px;
+  color:rgba(110,110,110,1);
+  opacity:1;  
 }
 .add-container{
   margin: 85px 79px;
